[package]
name = "anna-client-tokio"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["api"]

[dependencies]
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_yaml = "0.8.17"
argh = "0.1.4"
eyre = "0.6.5"
chrono = { version = "0.4.19", features = ["serde"] }
bytes = "1.0.1"
uuid = { version = "1.0.0", features = ["v4"] }
smol = "1.2.5"
rand = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
fern = "0.6.0"
futures-timer = "3.0.2"
once_cell = "1.8.0"
serde_json = "1.0.64"
crossbeam-utils = "0.8.5"
anna-api = { path = "api" }

[dev-dependencies]
pretty_assertions = "1.0.0"
