[package]
name = "wasmedge-anna-driver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["api"]

[dependencies]
serde = { version = "1.0.126", features = ["derive", "rc"] }
argh = "0.1.4"
eyre = "0.6.5"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4"] }
rand = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
fern = "0.6.0"
futures-timer = "3.0.2"
once_cell = "1.8.0"
serde_json = "1.0.64"
anna-api = { path = "api" }
tokio = { git = "https://github.com/WasmEdge/tokio.git", branch = "wasmedge", features = [
    "rt",
    "net",
    "time",
    "sync",
    "macros",
    "io-util",
] }
