[package]
name = "wasmedge-anna-driver"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
serde = { version = "1.0.126", features = ["derive", "rc"] }
argh = "0.1.4"
eyre = "0.6.5"
rand = "0.8.4"
futures = "0.3.15"
log = "0.4.14"
serde_json = "1.0.64"
uuid = { version = "1.0.0", features = ["v4"] }
anna-api = { git = "https://github.com/essa-project/anna-rs", rev = "e60629b" }
# tokio = { version = "1", features = [
#     "rt",
#     "net",
#     "time",
#     "sync",
#     "macros",
#     "io-util",
# ] }
tokio = { git = "https://github.com/WasmEdge/tokio.git", branch = "wasmedge", features = [
    "rt",
    "net",
    "time",
    "sync",
    "macros",
    "io-util",
] }
