[package]
name = "wasmedge-redis-client-examples"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[patch.crates-io]
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.25.4", default-features = false, features = [
    "tokio-comp",
] }
